--- a/index.html
+++ b/index.html
@@ -7,6 +7,11 @@
     <title>Play Unblocked Games At - Drift Hunters Unblock</title>
     <meta name="description"
         content="Unblocked Games - AT Drift Hunters Unblock  .Gitlab.io: Enjoy browser play, fullscreen action, and an ad-free gaming experience. Dive into fun today!">
+        <meta name="title" content="">
+        <meta name="keywords"
+            content="Drift Hunters Unblock, Faf games, Unblocked games, unblocked games 76, unblocked games 6x, unblocked games premium, unblocked games 66, unblocked games wtf, unblocked games 67, unblocked games world, unblocked games 66 ez, games unblocked, unblocked games 911, 76 unblocked games, unblocked games 77">
+        <meta name="news_keywords"
+            content="Drift Hunters Unblock, Faf games, Unblocked games, unblocked games 76, unblocked games 6x, unblocked games premium, unblocked games 66, unblocked games wtf, unblocked games 67, unblocked games world, unblocked games 66 ez, games unblocked, unblocked games 911, 76 unblocked games, unblocked games 77">
     <link rel="stylesheet" href="./assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="./assets/fonts/font-awesome.min.css">
     <link rel="stylesheet" href="./assets/css/Navbar-Right-Links-icons.css">
