--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
     <link rel="stylesheet" href="./assets/css/styles.css">
     <meta name="robots" content="index, follow">
     <link rel="canonical" href="https://drift-hunters-unblock.github.io/">
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-JZ4J44Y7KP"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-JZ4J44Y7KP');
+</script>
+    <meta name="google-site-verification" content="md_hNh0yt9QmoiFH7dspr2FMAOWTJTHJjDEyZ1Q710w" />
 </head>
 
 <body>
